# openAPI.yml
@@ -4,7 +4,7 @@ info:
   description: WxO L3 Services v2
   version: 0.1.0
 servers:
-  - url: https://wxo-l3-v2.onrender.com
+  - url: https://wxo-l3-v2.1d13bpwyy9q7.us-east.codeengine.appdomain.cloud
 paths:
   /query:
     get:
@@ -94,7 +94,7 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
       security:
         - HTTPBasic: []
-  /account/{account_id}:
+  /account:
     get:
       tags:
         - Account
@@ -103,7 +103,7 @@ paths:
       operationId: get_account
       parameters:
         - name: account_id
-          in: path
+          in: query
           required: true
           schema:
             type: string
@@ -121,6 +121,20 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
+      security:
+        - HTTPBasic: []
+  /ping:
+    get:
+      summary: Ping
+      description: Ping
+      operationId: ping
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Message'
       security:
         - HTTPBasic: []
 components:
